lots of new text, also added new lab members to active members list

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -736,38 +736,75 @@ are not normally co-authors.
 
 \newthought{Meetings}
 
-\noindent Because our lab has largely been operating in a ``hybrid'' mode of work (i.e.,
-partially remote and partially in-person), our meeting schedule and
-requirements have changed from prior years:
-\begin{itemize}
+\noindent Our lab has largely been operating in a ``hybrid'' mode of
+work (i.e., partially remote and partially in-person), and in recent
+years our meeting schedule and requirements have reflected this
+reality.  Moving forward, we are now gradually starting to incorporate
+more in-person interactions and meetings to facilitate more
+``spontaneous'' interactions, discussions, and collaborations.
 
-  \item In prior years, we have asked that all lab members meet with \director
-  twice per term (once at the start of the term and once at the end of the
-  term). The purpose of these twice-quarterly check-in meetings was to sync up
-  about goals and progress. These meetings are now optional, and may be
-  scheduled via~\meeting.
-
-  \item In prior years, our weekly lab meetings have been required for all lab
-  members who are able to attend. Our lab meetings are now designated as
-  check-in times for senior lab members and staff.
-
-\item In prior years, lab meetings provided a forum for doing practice
-presentations (poster presentations, talks), soliciting feedback on research
-projects, etc. The lab meeting time (\labmeetingtime) may be re-purposed in
-these ways upon request. If you'd like feedback on your project from the
-broader group, and/or if you'd like to schedule a practice presentation, simply
-message~\director~on Slack. 
-
-\end{itemize}
-
-\noindent  Effective lab communication requires forums for communicating.  As
+Effective lab communication requires forums for communicating.  As
 described below, we use \href{http://www.slack.com}{Slack} to
-facilitate non-in-person communications, but Slack cannot replace
-in-person meetings.  In fact, our approach is set up to encourage
+facilitate non-in-person communications.  We also encourage
 in-person interactions as often as possible---ideally several times a
 week for group projects.  We'll have the following regularly scheduled
 meetings:
-\begin{enumerate}
+
+\begin{itemize}
+  \item \textbf{Lab meetings.} Starting in the winter, 2024 term, we will be re-instating weekly lab
+meetings, to be held on Tuesdays from 1:30 -- 2:30 PM (Hanover time)
+in our main lab space (Moore Hall, Room 416).  If you are an active
+lab member, you are expected to attend our lab meetings unless you
+let \director~know that you have a conflict (e.g., a course that meets
+at the same time, another commitment that comes up, etc.).  It is
+important to prioritize lab meeting attendance so that we can build
+and maintain a lab culture of collaboration and ongoing participation.
+
+You are also expected to \textbf{present} at one lab meeting per
+term.  Possible presentation topics include (but are not limited to):
+\begin{itemize}
+  \item A half-baked idea you have
+  \item An interesting paper you read
+  \item An interesting tool or software package you learned about
+  \item A tutorial
+  \item A (brief) hackathon
+  \item Something you're confused about that you want help with from
+    other lab members
+  \item A practice presentation (poster, talk, etc.) you'd like
+    feedback on
+  \item Lead a discussion about some topic you think would be of
+    interest to the group
+\end{itemize}
+Each presenter can choose their own format (e.g., informal discussion,
+slide-based presentation, whiteboard-led discussion, interpretive
+song or dance, a creative artwork--- it's up to you!).  We recommend
+that you start off by setting the ``topic and tone'' for
+that day's meeting.  For example:
+\begin{itemize}
+    \item Quickly introduce yourself (name and current role in the
+      lab)
+    \item Say a sentence about what you're going to be doing with your
+      time
+    \item Set any ``ground rules'' you'd like others to follow and
+      make it clear what your ``goals'' are.  For
+      example, do you want people to jump in with questions or random
+      thoughts as they arise?  Take notes and wait until the end to
+      ask more in-depth questions?  What sorts of feedback would be
+      most helpful to you?  What are you hoping people will take away?
+      (Not all of these will apply to every type of presentation or
+      discussion, and there may be other elements you'd like to
+      consider; just use your best judgement!)
+  \end{itemize}
+
+  You can take up to an hour for your presentation or discussion,
+  although taking less than an hour is great too.  You can also share
+  a meeting slot with one or more other lab members if you wish.  (A
+  presentation with another lab member can still ``count'' as a
+  presentation for the given term.)  \director~will send out a Google Sheets
+  link where you can add yourself to the meeting schedule at the start
+  of each term.
+
+
 
 \item \textbf{Project meetings.}  Several of our collaborative
   projects involve regular coordination within the lab and/or with external lab members.
@@ -815,7 +852,7 @@ workflow on Slack. You can access this workflow in the \texttt{\#general}
 channel through the Workflows menu (usually near the top left of the window).
 (Virtual) attendees: all paid lab members and any other lab members who want to
 participate. 
-\end{enumerate}
+\end{itemize}
 
 %\newpage
 \newthought{Getting started in the lab}
@@ -1027,9 +1064,7 @@ events:
   \item We use the
     \href{https://calendar.google.com/calendar/embed?src=h1j06dohcg7v1g2o5tkb7ijhvs%40group.calendar.google.com&ctz=America%2FNew_York}{out-of-lab
       calendar} to keep track of known absences (e.g. illness, travel,
-    holidays, etc.).  \marginnote{\texttt{TASK:} If you are a graduate
-      or undergraduate student, please add your schedule to the CDL
-      class schedule calendar at the beginning of each term.}  All
+    holidays, etc.).  All
     full-time lab members should request write access.
   \item We use the \href{https://calendar.google.com/calendar/embed?src=j6noo2tqahpsoq9na1h16paf3s%40group.calendar.google.com&ctz=America%2FNew_York}{DHMC meetings
   calendar} to keep track of important events and meetings at DHMC.
@@ -1063,25 +1098,19 @@ events:
  \newthought{Attendance policy}
 
  \noindent In general, we expect full time employees to be in the lab
- during ``standard'' working hours---roughly between 9 AM and 5
- PM.\marginnote{\texttt{NOTE:} Our lab is currently operating in a hybrid remote/in-person format.  During this time, and until
-   further notice, you are never expected to be physically \textit{in}
-   the lab; you should interpret all references to being ``in'' the
-   lab as being ``available'' (e.g., doing lab-related work, signed
-   into slack, an so on).  Any in-person lab visits should be
-   coordinated with \director.}  The
- precise range of hours you work is less important to us than putting
- in an effort to help form a cohesive lab culture where lab members
- can interact in person to share ideas, leverage expertise, solve
- problems, etc.  Therefore, even if you end up deciding to shift your
- hours, we'd like you to make a strong effort to be physically present
- in the lab between 1 and 4 PM (prior arrangements notwithstanding;
- e.g. if you have a long commute and we've agreed that you won't come
- in every day, or if you need to occasionally schedule an appointment
- during the 1--4 PM window).  Similarly, if you are a part time
- employee, we'd like you to try to put in your in-the-lab hours during
- the 1--4 PM time window as often as possible.  (This is in addition
- to weekly lab meetings.)
+ during ``standard'' working hours---roughly between 9 AM and 5 PM.
+ The precise range of hours you work is less important to us than
+ putting in an effort to help form a cohesive lab culture where lab
+ members can interact in person to share ideas, leverage expertise,
+ solve problems, etc.  Therefore, even if you end up deciding to shift
+ your hours, we'd like you to make a strong effort to be physically
+ present in the lab between 1 and 4 PM (prior arrangements
+ notwithstanding; e.g. if you have a long commute and we've agreed
+ that you won't come in every day, or if you need to occasionally
+ schedule an appointment during the 1--4 PM window).  Similarly, if
+ you are a part time employee, we'd like you to try to put in your
+ in-the-lab hours during the 1--4 PM time window as often as possible.
+ (This is in addition to weekly lab meetings.)
 
  The lab also abides by Dartmouth's standard paid time off policies
  for benefits-eligible (full-time, non-student) employees.  If you are
@@ -1153,7 +1182,7 @@ events:
   alternative arrangements (e.g., by arranging for a co-author to
   present in your place).
 
-\item You are strongly encouraged (but never required) to attend
+\item You are encouraged (but never required) to attend
   relevant journal clubs, PBS talks, DHMC meetings and talks, thesis
   defenses, and other relevant lab and/or Dartmouth-affiliated events.
   If you are overwhelmed with other work, have a conflicting meeting,
@@ -1298,6 +1327,13 @@ gender-based discrimination.
  \href{https://github.com/ContextLab/cluster-tools-dartmouth}{sample
    Python scripts} for running analyses on Discovery.
 
+ Separate from the Discovery Supercomputing Cluster, our lab also
+ uses two \href{https://lambdalabs.com/}{Lambda Labs} ``Scalar'' GPU
+ servers with a total of 16 A6000 GPUs and 64 computing cores.  Each
+ server has roughly 3~TB of storage, which is shared by the entire
+ lab.  Let \director~know if you'd like access to our GPU servers so
+ that we can set up your account.
+
  \subsection{Other research equipment}
  Many research projects require specialized research equipment (e.g.\
  for neuroimaging using fMRI, EEG, ECoG, etc.).  Some of the necessary
@@ -1306,7 +1342,7 @@ gender-based discrimination.
  equipment should be treated with care and respect.  Any malfunctions
  should be reported immediately.
 
-\subsection{Repository of shared lab papers}
+\subsection{Repository of shared lab papers and books}
 Our lab maintains a Dropbox repository of PDFs for internal use by lab
 members and affiliates. Contact \director~for a link (not to be shared
 publicly).
@@ -1643,7 +1679,10 @@ feel you need access to RAPPORT then let \director~know.
 \item Grady Redding (2023 -- )
 \item DJ Matusz (2023 -- )
 \item Sarah Parigela (2023 -- )
-
+\item Jake McDermid (2023 -- )
+\item Emma Reeder (2023 -- )
+\item Michael Chen (2023 -- )
+\item Andrew Cao (2024 -- )
 \end{list}
 \end{multicols}
 
@@ -1813,7 +1852,7 @@ feel you need access to RAPPORT then let \director~know.
     worded biography, to be included on the lab website.
     Alternatively, I indicated (via Slack message to \coordinator) my
     preference to not be included on the lab website.
-  \item If I am a senior lab member, I agree to regularly attend lab meetings (unless I have a
+  \item I agree to regularly attend lab meetings (unless I have a
     course conflict and have informed \director).
     \item I agree to send \director~regular updates regarding my
       progress and work, including weekly snippets, meetings, Slack
