--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1800,6 +1800,7 @@ feel you need access to RAPPORT then let \director~know.
 \item Mark Taylor (2021 -- 2022)
 \item Francisca O. Fadairo (2023)
 \item Ameer Talha Yasser (2023)
+\item Jacob Bacus (2023)
 \end{list}
 \end{multicols}
 \end{fullwidth}
