--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1810,7 +1810,7 @@ feel you need access to RAPPORT then let \director~know.
 
    By signing below, I certify that I have completed the following tasks:
    \begin{todolist}
-     \item I have joined the lab's Slack account and worked through the
+     \item[\done] I have joined the lab's Slack account and worked through the
     orientation workflow to share my accounts and information with
     \director.  (Click the Workflows menu in
     the \#general channel and select `Join the lab!' to start the
