Update lab_manual.tex added Jacob Bacus

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1683,6 +1683,7 @@ feel you need access to RAPPORT then let \director~know.
 \item Emma Reeder (2023 -- )
 \item Michael Chen (2023 -- )
 \item Andrew Cao (2024 -- )
+\item Jacob Bacus (2024 --)
 \end{list}
 \end{multicols}
 
@@ -1800,7 +1801,6 @@ feel you need access to RAPPORT then let \director~know.
 \item Mark Taylor (2021 -- 2022)
 \item Francisca O. Fadairo (2023)
 \item Ameer Talha Yasser (2023)
-\item Jacob Bacus (2023)
 \end{list}
 \end{multicols}
 \end{fullwidth}
