Added Rohan Goyal to Lab Members

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1684,6 +1684,7 @@ feel you need access to RAPPORT then let \director~know.
 \item Michael Chen (2023 -- )
 \item Andrew Cao (2024 -- )
 \item Jacob Bacus (2024 -- )
+\item Rohan Goyal (2024 -- )
 \end{list}
 \end{multicols}
 
