Add Hung-Tu Chen as a lab member

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1650,6 +1650,11 @@ feel you need access to RAPPORT then let \director~know.
 
 \enskip Jeremy R. Manning (2015 -- )
 
+\newthought{Postdoctoral Researchers}
+\bigskip
+
+\enskip Hung-Tu Chen (2024 --)
+
 \newthought{Graduate Students}
 \begin{multicols}{2}\raggedcolumns
 \begin{list}{\quad}{}
