--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1685,6 +1685,7 @@ feel you need access to RAPPORT then let \director~know.
 \item Andrew Cao (2024 -- )
 \item Jacob Bacus (2024 -- )
 \item Rohan Goyal (2024 -- )
+\item Manraaj Singh (2024 -- )
 \end{list}
 \end{multicols}
 
