addressed all open pull requests, removed andrew knutson from IT support contact list, added bonnie scott to tensor support list

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1327,12 +1327,12 @@ gender-based discrimination.
  \href{https://github.com/ContextLab/cluster-tools-dartmouth}{sample
    Python scripts} for running analyses on Discovery.
 
- Separate from the Discovery Supercomputing Cluster, our lab also
- uses two \href{https://lambdalabs.com/}{Lambda Labs} ``Scalar'' GPU
- servers with a total of 16 A6000 GPUs and 64 computing cores.  Each
- server has roughly 3~TB of storage, which is shared by the entire
- lab.  Let \director~know if you'd like access to our GPU servers so
- that we can set up your account.
+ Separate from the Discovery Supercomputing Cluster, our lab also uses two
+ \href{https://lambdalabs.com/}{Lambda Labs} ``Scalar'' GPU servers with a
+ total of 16 A6000 GPUs and 64 computing cores. Each server has roughly 3~TB of
+ storage, which is shared by the entire lab. Let \director~know if you'd like
+ access to our GPU servers (and send your NetID) so that we can set up your
+ account.
 
  \subsection{Other research equipment}
  Many research projects require specialized research equipment (e.g.\
@@ -1478,9 +1478,10 @@ them.
   actively using the equipment should be your first-sought resource.
 
 \item For issues related to the Discovery computing cluster, or for general \ourschool-specific IT questions or issues, contact
-  \href{help@dartmouth.edu}{open a ticket} with the Information,
-  Technology, and Consulting office, or contact
-  \href{mailto:Andrew.C.Knutsen@Dartmouth.edu}{Andrew Knutsen}.
+  \href{mailto:help@dartmouth.edu}{open a ticket} with the Information,
+  Technology, and Consulting office.
+
+\item For issues related to the Tensor GPU cluster, contact \href{mailto:Bonnie.J.Scott@dartmouth.edu}{Bonnie Scott}.
 \end{itemize}
 
 \subsection{Lab documents}
@@ -1650,6 +1651,13 @@ feel you need access to RAPPORT then let \director~know.
 
 \enskip Jeremy R. Manning (2015 -- )
 
+\newthought{Postdoctoral Researchers}
+\begin{multicols}{2}\raggedcolumns
+  \begin{list}{\quad}{}
+    \item Hung-Tu Chen (2024 -- )
+  \end{list}
+\end{multicols}
+
 \newthought{Graduate Students}
 \begin{multicols}{2}\raggedcolumns
 \begin{list}{\quad}{}
@@ -1670,7 +1678,6 @@ feel you need access to RAPPORT then let \director~know.
 \newthought{Undergraduate RAs}
 \begin{multicols}{2}\raggedcolumns
 \begin{list}{\quad}{}
-\item Daniel Carstensen (2021 -- )
 \item Ansh Patel (2021 -- )
 \item Megan Liu (2023 -- )
 \item Yue Zhuo (2023 -- )
@@ -1685,6 +1692,12 @@ feel you need access to RAPPORT then let \director~know.
 \item Andrew Cao (2024 -- )
 \item Jacob Bacus (2024 -- )
 \item Rohan Goyal (2024 -- )
+\item Everett Tai (2024 -- )
+\item Chelsea Joe (2024 -- )
+\item Matthew Givens (2024 -- )
+\item Can Kam (2024 -- )
+\item Miel Wewerka (2024 -- )
+\item Rodrigo Vega Ayllon (2025 -- )
 \end{list}
 \end{multicols}
 
@@ -1802,6 +1815,8 @@ feel you need access to RAPPORT then let \director~know.
 \item Mark Taylor (2021 -- 2022)
 \item Francisca O. Fadairo (2023)
 \item Ameer Talha Yasser (2023)
+\item Daniel Carstensen (2021 -- 2024)
+
 \end{list}
 \end{multicols}
 \end{fullwidth}
