--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1698,6 +1698,7 @@ feel you need access to RAPPORT then let \director~know.
 \item Can Kam (2024 -- )
 \item Miel Wewerka (2024 -- )
 \item Rodrigo Vega Ayllon (2025 -- )
+\item Owen Phillips (2025 -- )
 \end{list}
 \end{multicols}
 
