added compile script, added new lab members to current members list

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -161,7 +161,7 @@ Copyright \copyright\ \the\year\ \thanklessauthor
 
 \newcommand{\director}{Jeremy}
 \newcommand{\coordinator}{\director}
-\newcommand{\labmeetingtime}{Thursdays at 12:30pm}
+\newcommand{\labmeetingtime}{Mondays at 1:15pm}
 \newcommand{\meeting}{\href{https:context-lab.youcanbook.me}{YouCanBook.me}}
 
 \cleardoublepage
@@ -1699,6 +1699,8 @@ feel you need access to RAPPORT then let \director~know.
 \item Miel Wewerka (2024 -- )
 \item Rodrigo Vega Ayllon (2025 -- )
 \item Evan McDermid (2025 -- )
+\item Owen Phillips (2025 -- )
+\item Colson Duncan (2025 -- )
 \end{list}
 \end{multicols}
 
