Add name to lab members and fix minor typos

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -334,9 +334,9 @@ efficiency, we need to succeed on three fronts:
   software packages to synchronize and facilitate communication within
   our lab and between our lab and the broader scientific community.
 \item \textbf{Resource allocation.}  \marginnote{\texttt{NOTE:}
-    resources, links, and discussions related to grants and other
+    Resources, links, and discussions related to grants and other
     funding opportunities may be found in the \#grants Slack channel.
-  All senior lab personel (and any interested junior personel) should join this channel to participate in
+  All senior lab personnel (and any interested junior personnel) should join this channel to participate in
   discussions pertaining to lab resources.} Our lab resources (e.g.\
   equipment, time, money, attention) are finite.  We want to foster an
   environment where lab resources are used as efficiently as possible
@@ -1477,7 +1477,7 @@ them.
   research equipment, etc.) \coordinator~or the senior lab member
   actively using the equipment should be your first-sought resource.
 
-\item For issues related to the Discovery computing cluster, or for general \ourschool-specific IT questions or issues, contact
+\item For issues related to the Discovery computing cluster, or for general \ourschool-specific IT questions or issues,
   \href{mailto:help@dartmouth.edu}{open a ticket} with the Information,
   Technology, and Consulting office.
 
@@ -1583,7 +1583,7 @@ them.
 
 
 \chapter{Internal Review Board (IRB) approvals}\label{ch:irb}
-Experimental \marginnote{\texttt{NOTE:} prior to running any
+Experimental \marginnote{\texttt{NOTE:} Prior to running any
   non-lab-member participants in your study, you must coordinate with
   \coordinator~to verify that (a) your experiment has been approved by
   the IRB and (b) your name is specifically listed on the associated
@@ -1663,6 +1663,7 @@ feel you need access to RAPPORT then let \director~know.
 \begin{list}{\quad}{}
 \item Paxton Fitzpatrick (2021 -- )
 \item Xinming Xu (2021 -- )
+\item Claudia Gonciulea (2025 -- )
 \end{list}
 \end{multicols}
 
