--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1702,6 +1702,7 @@ feel you need access to RAPPORT then let \director~know.
 \item Evan McDermid (2025 -- )
 \item Owen Phillips (2025 -- )
 \item Colson Duncan (2025 -- )
+\item Annabelle Morrow (2025 --)
 \end{list}
 \end{multicols}
 
