adding new lab members

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1704,6 +1704,10 @@ feel you need access to RAPPORT then let \director~know.
 \item Colson Duncan (2025 -- )
 \item Annabelle Morrow (2025 --)
 \item Ellie Mattox (2025 -- )
+\item Ben Hanson (2025 -- )
+\item Jaysen Quan (2025 -- )
+\item Andrew Richardson (2025 -- )
+\item Keene Dampal (2025 -- )
 \end{list}
 \end{multicols}
 
