Add Kevin Chang to Lab Members

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1708,6 +1708,7 @@ feel you need access to RAPPORT then let \director~know.
 \item Jaysen Quan (2025 -- )
 \item Andrew Richardson (2025 -- )
 \item Keene Dampal (2025 -- )
+\item Kevin Chang (2025 -- )
 \end{list}
 \end{multicols}
 
